Bug 363087 - Swap used very heavy
Summary: Swap used very heavy
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.0 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-14 22:49 UTC by akelunprod
Modified: 2016-05-27 11:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description akelunprod 2016-05-14 22:49:57 UTC
I tryed the latest Krita 3.0 Beta with a heavy file (precisions in "additional informations") and I noticed something weird which doesn't happen in Krita 2.9.11: when I draw several outlines on a layer (something like 15 outlines with a classic brush and in set horizontal mirror mode), the "Swap used" increase a lot (from 1 M to almost 3 G instead of 6 M for Krita 2.9.11, which is a huge difference).

I think I managed to correct it though by adding the "Swap file location" of Krita 2.9.11 in the performance tab of the krita 3.0 Beta preferences.

Reproducible: Always



Expected Results:  
Maybe the problem could be definitely fixed by default if a "swap file location" is added by default in the performance tab of the Krita 3.0 preferences if really this fixes the problem definitely?

File used for this:

    http://akelun.deviantart.com/art/Mizuko-Turn-around-v5-601638976
    151 layers
    Resolution: 4160 * 2340 px
    RGB 8-bit
    OpenGL activated
    High Quality Filtering scaling mode
    Set horizontal mirror mode activated to test and compare

Computer used to compare:

    Windows 8.1
    Motherboard: MSI Z170A Gaming 3 ATX
    Intel Core i7 6700k 4 GH
    GeForce GTX 980 Ti 6 Go
    16 Go RAM (2*8 Go)
    250 Go SSD hard disk (OS) + 1 To hard disk (File)

Other:

    Wacom Cintiq 12 WX
Comment 1 Halla Rempt 2016-05-15 11:07:51 UTC
I rather suspect a bug in 2.9.11 memory reporting. If you can send me the original .kra I can try to verify, but your file would take about 5gb in memory. I'm also not sure what you mean by "swap file location" is added by default " -- Krita has a swap file enabled by default.
Comment 2 Dmitry Kazakov 2016-05-15 11:18:24 UTC
Hi, akelunprod!

Thank you for your report! Can I ask you either to attach an original testing file, or, if it is not for publishing, send it directly to my email (dimula73@gmail.com)? It would help me a lot to find out what is wrong with the swapping, and is it wrong at all.

Could you also give more details about this line?

"I think I managed to correct it though by adding the "Swap file location" of Krita 2.9.11 in the performance tab of the krita 3.0 Beta preferences."

What exactly did you mean by that? Did you change any option and the swapping stopped?
Comment 3 akelunprod 2016-05-16 16:45:12 UTC
@Boudewejin Rempt : Well, I'm not sure about a "bug in 2.9.11 memory reporting" because 2.9.11 runs perfectly for me, I have troubles with the 3.0 Beta only. And also, about the memory, as you're talking about: my file take 3 G of memory only in the 2.9.11 and the double (6.2 G) in the 3.0 Beta, which also give me troubles to work on my file in the 3.0 Beta. ~~~~~ Maybe I should open another bug request about this? ~~~~~
Here, you can see what I mean:
- 2.9.11: http://sta.sh/0y0e0ken84f
- 3.0 Beta: http://sta.sh/02dk73fa66da


@Boudewejin Rempt & @ Dmitry Kazakov : If needed, yes, I can send you the file I used to test (Note that I tested it with "set horizontal mode" activated in a new layer). But I prefere indeed to send it by mail. If any Krita developers need it, they could ask me.
Also, about the "swap file location", here is what I mean when I said it wasn't added by default in Krita 3.0 Beta and that I managed to fix the problem by copy -paste the swap file location of Krita 2.9.11 in Krita 3.0 Beta:
- 2.9.11 by default: http://sta.sh/0282ch23515f
- 3.0 Beta by default: http://sta.sh/01pt2mad4l5o
So, I copied "C:/Users/Utilisateur/AppData/Roaming/krita/tmp-/krita" and I think I fixed the problem this way... But I have some doubts about it now, because I continued to test a bit and... I really don't understand how the Swap used works.
I have to be honest, I don't even know what is the "Swap" or what is better between a light "Swap used" or a heavy one? I just had the feeling when I tested and managed to get the same Swap used than Krita 2.9.11 in 3.0 Beta that it worked a bit better and faster, but I can't be sure and still wonder what makes the "Swap used" heavy or light. =/


So, I hope I managed to explain the problem better and coherently. I try my best as English isn't my native language. ^^
If you need more precisions, don't hesitate to ask. I will send you my .kra file by mail, but I'll probably have to share it to you by uploading it in uplea.com because the file weighs 76.12 Mo.


Thank's for your fast answers. ^^
Comment 4 Halla Rempt 2016-05-25 12:55:14 UTC
Git commit 59c331cd20517d201ab0a6a52a745fe5a804a9fb by Boudewijn Rempt.
Committed on 25/05/2016 at 12:55.
Pushed by rempt into branch 'master'.

The QStandardPaths code to get a swap dir resulted in an empty
path, which got replaced by QDir::tmpPath() in KisSwappedDataStore.

That's to say; if the user didn't configure a swap location, we'd
still use swap, so that isn't the problem. But we didn't show the
location in the preferences dialog.

So, use the same code to get the temp path for swap in both cases.

M  +2    -2    libs/image/kis_image_config.cpp

http://commits.kde.org/krita/59c331cd20517d201ab0a6a52a745fe5a804a9fb
Comment 5 Dmitry Kazakov 2016-05-26 13:49:43 UTC
Just tested with the provided file. Memory consumption raises drastically when the LoD mode is turned on. It should be some bug... :(
Comment 6 Dmitry Kazakov 2016-05-27 11:39:28 UTC
Git commit 447a50260802215c530f17a3ed0f9e98613cdbe6 by Dmitry Kazakov.
Committed on 27/05/2016 at 11:39.
Pushed by dkazakov into branch 'master'.

Fix leak in KisSyncLodCacheStrokeStrategy
Fixes T2745

M  +23   -21   libs/image/kis_paint_device.cc
M  +4    -1    libs/image/kis_paint_device.h
M  +1    -0    libs/image/kis_sync_lod_cache_stroke_strategy.cpp
M  +18   -0    libs/image/tests/kis_update_scheduler_test.cpp
M  +2    -0    libs/image/tests/kis_update_scheduler_test.h

http://commits.kde.org/krita/447a50260802215c530f17a3ed0f9e98613cdbe6