Fix leak in KisSyncLodCacheStrokeStrategy

BUG:363087
Fixes T2745